fix colour contrast between icons and grey background

--- a/data-curation-tool/src/app/var/var.component.css
+++ b/data-curation-tool/src/app/var/var.component.css
@@ -1,5 +1,5 @@
 .grey {
-  background: #ebebeb;
+  background: #f4f4f4;
 }
 
 .active {
